...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_footer"
            android:layout_below="@id/toolbar" />

        <RelativeLayout
...
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:scaleType="centerInside"
                android:src="@drawable/button_arrow_left_selector" />

            <org.akvo.caddisfly.widget.PageIndicatorView
                android:id="@+id/pager_indicator"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:id="@+id/image_pageRight"
...
